--- a/src/component/group/index.css
+++ b/src/component/group/index.css
@@ -12,13 +12,11 @@
   display: flex;
   flex-direction: column;
   gap: calc(var(--layout-space) * var(--layout-gutter));
-  max-width: 100%;
-  overflow: hidden;
 }
 
 .group-header {
-  display: flex;
-  flex-direction: row;
+  display: grid;
+  grid-template-columns: auto 1fr;
   gap: calc(var(--layout-space) * var(--layout-gutter));
 }
 
@@ -28,7 +26,6 @@
   align-items: center;
   max-width: 100%;
   overflow: hidden;
-  font-size: var(--group-name-size);
 }
 
 .group-name-text {
