--- a/src/component/form/helper/index.css
+++ b/src/component/form/helper/index.css
@@ -1,5 +1,5 @@
 :root {
-  --form-helper: var(--theme-primary-text-010);
+  --form-helper: var(--theme-primary-120);
   --form-helper-disabled: var(--theme-primary-030);
 }
 
