--- a/src/component/base/zindex/index.css
+++ b/src/component/base/zindex/index.css
@@ -7,5 +7,5 @@
   --z-index-shade: 6000;
   --z-index-menu: 7000;
   --z-index-modal: 8000;
-  --z-index-auto-suggest: 9000;
+  --z-index-suggest: 9000;
 }
