--- a/src/component/edge/index.css
+++ b/src/component/edge/index.css
@@ -20,10 +20,10 @@
   z-index: var(--z-index-edge);
   pointer-events: none;
   transition: opacity var(--layout-transition-extra-fast);
-  transition:
+  /* transition:
     opacity var(--layout-transition-extra-fast),
     top var(--layout-duration-02),
     left var(--layout-duration-02),
     width var(--layout-duration-02),
-    height var(--layout-duration-02);
+    height var(--layout-duration-02); */
 }
