--- a/src/component/group/index.css
+++ b/src/component/group/index.css
@@ -11,13 +11,36 @@
 .group {
   display: flex;
   flex-direction: column;
+  gap: 0;
+  transition: gap var(--layout-transition-extra-fast) var(--layout-duration-04);
+}
+
+.group.is-group-header,
+.group.is-group-open-all {
   gap: calc(var(--layout-space) * var(--layout-gutter));
 }
 
-.group-header {
-  display: grid;
-  grid-template-columns: auto 1fr;
+.is-group-edit .group {
   gap: calc(var(--layout-space) * var(--layout-gutter));
+  transition: gap var(--layout-transition-extra-fast);
+}
+
+.group-header {
+  display: flex;
+  gap: calc(var(--layout-space) * var(--layout-gutter));
+}
+
+.is-group-justify-left .group-header {
+  flex-direction: row;
+}
+
+.is-group-justify-center .group-header {
+  flex-direction: row;
+  justify-content: center;
+}
+
+.is-group-justify-right .group-header {
+  flex-direction: row-reverse;
 }
 
 .group-name {
@@ -39,14 +62,29 @@
   color: hsl(var(--theme-accent-text));
 }
 
+.is-theme-background-type-color .group-name-text {
+  color: hsl(var(--theme-background-color-text));
+}
+
 .group-body {
   position: relative;
+  font-size: calc(calc(var(--bookmark-size) / 10) * 0.1em);
   min-height: var(--group-cell-height);
   display: grid;
   grid-auto-rows: var(--group-cell-height);
   gap: calc(var(--layout-space) * var(--layout-gutter));
   grid-template-columns: repeat(auto-fill, minmax(var(--group-cell-width), 1fr));
   grid-auto-flow: dense;
+}
+
+.group-control {
+  height: 0;
+  transition: height var(--layout-transition-extra-fast) var(--layout-duration-04);
+}
+
+.is-group-edit .group-control {
+  height: 2.5em;
+  transition: height var(--layout-transition-extra-fast);
 }
 
 .group-control-group {
@@ -57,6 +95,7 @@
 
 .is-group-edit .group-control-group {
   width: 20em;
+  transition: width var(--layout-transition-extra-fast) var(--layout-duration-04);
 }
 
 .group-sort-placeholder {
