--- a/src/component/theme/index.css
+++ b/src/component/theme/index.css
@@ -38,6 +38,11 @@
 
 :root {
   --theme-background-theme: var(--theme-primary-010);
+  --theme-background-color-r: 25;
+  --theme-background-color-g: 25;
+  --theme-background-color-b: 25;
+  --theme-background-color: var(--theme-background-color-r), var(--theme-background-color-g), var(--theme-background-color-b);
+  --theme-background-color-text: 0, 0%, calc(((((var(--theme-background-color-r) * var(--theme-t-r)) + (var(--theme-background-color-g) * var(--theme-t-g)) + (var(--theme-background-color-b) * var(--theme-t-b))) / 255) - var(--theme-t)) * -10000000%);
 }
 
 :root {
@@ -362,13 +367,36 @@
   background-attachment: fixed;
   background-size: cover;
   background-position: center;
+  position: relative;
   transform: scale(calc(calc(var(--theme-background-image-scale) / 100) + calc(var(--theme-background-image-blur) / 400)));
   filter: blur(calc(var(--theme-background-image-blur) * 1px));
+}
+
+.theme-background-type-image:after {
+  content: "";
+  background-color: rgba(var(--theme-accent), calc(var(--theme-background-image-accent) / 100));
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
 }
 
 .theme-background-type-video {
   transform: scale(calc(var(--theme-background-video-scale) / 100));
   filter: blur(calc(var(--theme-background-video-blur) * 1px));
+}
+
+.theme-background-type-video:after {
+  content: "";
+  background-color: rgba(var(--theme-accent), calc(var(--theme-background-video-accent) / 100));
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
 }
 
 .theme-background-type-video video {
