--- a/src/component/shade/index.css
+++ b/src/component/shade/index.css
@@ -8,6 +8,10 @@
   opacity: 0;
   z-index: var(--z-index-shade);
   transition: background-color var(--layout-transition-extra-fast), opacity var(--layout-transition-extra-fast);
+  pointer-events: all;
+}
+
+.shade.is-transparent {
   pointer-events: none;
 }
 
