--- a/src/component/group/index.css
+++ b/src/component/group/index.css
@@ -12,6 +12,7 @@
   display: flex;
   flex-direction: column;
   gap: 0;
+  width: 100%;
   transition: gap var(--layout-transition-extra-fast) var(--layout-duration-04);
 }
 
@@ -26,7 +27,10 @@
 }
 
 .group-header {
+  position: relative;
   display: flex;
+  align-items: center;
+  flex-wrap: nowrap;
   gap: calc(var(--layout-space) * var(--layout-gutter));
 }
 
@@ -47,7 +51,7 @@
   height: 2.5em;
   display: flex;
   align-items: center;
-  max-width: 100%;
+  flex-shrink: 1;
   overflow: hidden;
 }
 
@@ -78,13 +82,16 @@
 }
 
 .group-control {
+  margin-left: calc(calc(var(--layout-space) * var(--layout-gutter)) * -1);
   height: 0;
-  transition: height var(--layout-transition-extra-fast) var(--layout-duration-04);
+  align-self: flex-end;
+  transition: height var(--layout-transition-extra-fast) var(--layout-duration-04), margin var(--layout-transition-extra-fast);
 }
 
 .is-group-edit .group-control {
+  margin: 0;
   height: 2.5em;
-  transition: height var(--layout-transition-extra-fast);
+  transition: height var(--layout-transition-extra-fast), margin var(--layout-transition-extra-fast) var(--layout-duration-04);
 }
 
 .group-control-group {
